2005-09-30  Andreas Kupries <andreask@activestate.com>

	* sha1.tcl: Applied [SF Tcllib Patch 1301707] to keep the size of
	  generated numbers within the bounds of 32 bits.

2005-02-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sha256.tcl: Speeded up the digest calculation.
	* sha1.tcl:   Arranged to run all available implementations in the
	* sha1.test:  tests. Speeded up the calculation.

2005-02-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* pkgIndex.tcl: Provide version 1 and version 2
	* sha1.tcl:     Rationalised the handling of accelerator extensions.
	* sha1.test:    Tests fixed for the above.

	* sha1.tcl:    Support cryptkit as a possible accellerator.
	* sha1.test:   Enable testing of cryptkit implementation.

2005-02-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sha256.tcl:  Inlined a load of expr calls to speed it up.
	
	* sha256.tcl:  SHA-224 and SHA-256 pure-Tcl implementation
	* sha256.test: Tests from FIPS 180-2 for SHA-224 and SHA-256
	This is the first version. It is correct (in that it passes the
	FIPS test vectors) but slow. Speedups to follow.

2005-02-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sha1.h: replaced the possibly buggy sample extension implementation
	* sha1.c: with shiny new code from the NetBSD project.

	* sha1.test: Added some file tests (16K and 81K)
	* sha1.tcl: Replaced steps 1 and 3 with slightly more efficient
	but equivalent bit operations. Fixed an error with integer length
	exposed with tcl8.5. Verified 8.2-8.5

2005-02-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sha1c.tcl: Imported the sha1 implementation from the Tcl sample
	* sample.h:  extension and created a critcl wrapper.
	* sample.c:  Added to the sak.tcl critcl generation code.
	
	* sha1.tcl:  Re-implemented to support hashing data in chunks
	* sha1.test: Included tests from RFC 2202 for HMAC-SHA1.
	* sha1.man:  This time we have kept the same API but with optional