@@ -10,7 +10,7 @@
 
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
 package ifneeded sha256 1.0.1 [list source [file join $dir sha256.tcl]]
-package ifneeded sha1 2.0.1 [list source [file join $dir sha1.tcl]]
+package ifneeded sha1 2.0.2 [list source [file join $dir sha1.tcl]]
 package ifneeded sha1 1.1.0 \
     "[list source [file join $dir sha1.tcl]];\
      package forget sha1;\
